tests/errors/nonnull_assert_null.dang
# Postfix `!` raises at runtime when the asserted value is actually null.

maybe(b: Boolean!): String {
  if (b) { "hi" } else { null }
}

print(maybe(false)!)
